--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-intl": "^6.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
